--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
   }
   
   .hero {
-    background-image: url("./images.jpg")
+    background-image: url("./images.jpg");
     background-size: cover;
     background-position: center;
   }
